enable previews on compilerArgs